--- a/app/src/main/res/drawable/circle_fab.xml
+++ b/app/src/main/res/drawable/circle_fab.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadius="24dp"
+    android:innerRadius="0dp"
     android:shape="ring"
     android:thickness="120dp"
     android:useLevel="false">
 
     <solid
 
-        android:color="#7FC0C0C0" />
+        android:color="#aaDd" />
 
 </shape>
