--- a/app/src/main/res/drawable/roundedbutton.xml
+++ b/app/src/main/res/drawable/roundedbutton.xml
@@ -10,7 +10,7 @@
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp" />
     <stroke
-        android:color="#000"
+        android:color="#FFF"
         android:width="1dp"
         >
 
