--- a/app/src/main/res/drawable/roundedbutton3.xml
+++ b/app/src/main/res/drawable/roundedbutton3.xml
@@ -1,12 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:shape="rectangle">
-
-    <corners
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp" />
+    android:shape="oval">
+    <stroke android:width="1dp" android:color="@color/green" />
+    <size android:width="28dp" android:height="28dp"/>
 </shape>
