--- a/app/src/main/res/layout/fragment_photochange.xml
+++ b/app/src/main/res/layout/fragment_photochange.xml
@@ -50,6 +50,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
+                    style="@style/MainTabLayoutStyle"
                     app:tabIndicatorColor="@color/primary_dark"
                     app:tabTextColor="@color/black">
 
