--- a/app/src/main/res/layout/job_advert.xml
+++ b/app/src/main/res/layout/job_advert.xml
@@ -1,119 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardView"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:elevation="10dp"
-    app:cardCornerRadius="10dp"
-    app:cardUseCompatPadding="true">
+    android:background="@android:color/transparent">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
+        android:id="@+id/outSection"
         android:layout_height="wrap_content">
 
-
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="20dp">
+            android:layout_marginTop="10dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="8dp"
+            app:cardUseCompatPadding="true">
 
-
-            <TextView
-                android:id="@+id/companyName"
-                style="@style/TextAppearance.AppCompat.Title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:drawableLeft="@drawable/tick"
-                android:padding="3dp"
-                android:text="MD Bilişim Sistemleri"
-                android:textAlignment="center" />
+                android:orientation="vertical"
+                android:padding="10dp">
 
-            <RelativeLayout
-                android:id="@+id/info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp">
-
-                <ImageView
-                    android:id="@+id/companyLogo"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/work" />
 
                 <TextView
-                    android:id="@+id/companyJob"
+                    android:id="@+id/companyName"
+                    style="@style/TextAppearance.AppCompat.Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/companyLogo"
-                    android:layout_toEndOf="@id/companyLogo"
-                    android:fontFamily="casual"
-                    android:padding="2dp"
-                    android:layout_marginStart="5dp"
-                    android:text="BİLGİSAYAR MÜHENDİSİ "
-                    android:textColor="@color/black"
-                    android:textSize="12dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="serif"
+                    android:padding="5dp"
+                    android:text="MD Bilişim Sistemleri"
+                    android:textAlignment="center"
+                    android:textSize="15dp" />
 
-                    />
-
-                <TextView
-                    android:id="@+id/jobDescpriction"
+                <RelativeLayout
+                    android:id="@+id/info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/companyJob"
-                    android:layout_toRightOf="@id/companyLogo"
-                    android:padding="2dp"
-                    android:layout_marginStart="5dp"
-                    android:fontFamily="casual"
+                    android:layout_marginTop="3dp">
 
-                    android:text="ANDROİD DEVELOPER "
-                    android:textSize="12dp" />
+                    <ImageView
+                        android:id="@+id/companyLogo"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:scaleType="fitXY" />
 
+                    <TextView
+                        android:id="@+id/companyJob"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@id/companyLogo"
+                        android:layout_marginStart="5dp"
+                        android:layout_toEndOf="@id/companyLogo"
+                        android:fontFamily="casual"
+                        android:padding="2dp"
+                        android:text="BİLGİSAYAR MÜHENDİSİ "
+                        android:textColor="@color/black"
+                        android:textSize="10dp"
 
-                <TextView
-                    android:id="@+id/companyLocation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
+                        />
 
-                    android:layout_alignBottom="@id/companyLogo"
-                    android:layout_below="@id/jobDescpriction"
-                    android:layout_toRightOf="@id/companyLogo"
-                    android:gravity="center_vertical"
-                    android:padding="2dp"
-                    android:text="İstanbul "
-                    android:textSize="10dp" />
-                <TextView
-                    android:id="@+id/companyDistance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBottom="@id/companyLogo"
-                    android:layout_below="@id/jobDescpriction"
-                    android:gravity="center_vertical"
-                    android:padding="2dp"
-                    android:layout_alignParentEnd="true"
-                    android:text="2km"
-                    android:textSize="10dp" />
-
-            </RelativeLayout>
+                    <TextView
+                        android:id="@+id/jobDescpriction"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/companyJob"
+                        android:layout_marginStart="5dp"
+                        android:layout_toRightOf="@id/companyLogo"
+                        android:fontFamily="casual"
+                        android:padding="2dp"
+                        android:text="ANDROİD DEVELOPER "
+                        android:textSize="10dp" />
 
 
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/companyLocation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/jobDescpriction"
+                        android:layout_marginStart="5dp"
+                        android:layout_toRightOf="@id/companyLogo"
+                        android:gravity="center_vertical"
+                        android:padding="2dp"
+                        android:text="İstanbul "
+                        android:textSize="10dp" />
 
-        <ImageView
-            android:id="@+id/saveAdvert"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|end"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="-5dp"
-            android:src="@drawable/ic_bookmark_24dp" />
+                    <TextView
+                        android:id="@+id/companyDistance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@id/companyLocation"
+                        android:layout_alignParentEnd="true"
+                        android:layout_below="@id/jobDescpriction"
+                        android:gravity="center_vertical"
+                        android:padding="2dp"
+                        android:text="2km"
+                        android:textSize="10dp" />
 
-    </FrameLayout>
 
-</android.support.v7.widget.CardView>
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+    </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/saveAdvert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/white"
+        app:layout_anchor="@+id/outSection"
+        app:layout_anchorGravity="top|end|left"
+        app:elevation="10dp"
+
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_bookmark_24dp" />
+
+</android.support.design.widget.CoordinatorLayout>
+
