--- a/app/src/main/res/layout/snippet_card_about.xml
+++ b/app/src/main/res/layout/snippet_card_about.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
-
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -45,14 +43,14 @@
 
                     <ImageView
                         android:id="@+id/addAbout_btn"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginEnd="2dp"
                         android:onClick="editAbout"
                         android:layout_marginTop="2dp"
-                        android:src="@drawable/ic_add_black_24dp"
+                        android:src="@drawable/pencil"
                         android:tint="@color/black" />
 
                     <TextView
@@ -61,6 +59,8 @@
                         android:layout_height="wrap_content"
                         android:padding="12dp"
                         android:text="Hakkımda"
+                        android:fontFamily="serif-monospace"
+                        android:layout_centerInParent="true"
                         android:textColor="@color/cardview_dark_background"
                         android:textSize="20sp"
                         android:textStyle="bold|italic" />
