--- a/app/src/main/res/layout/snippet_card_egitim.xml
+++ b/app/src/main/res/layout/snippet_card_egitim.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-  >
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <android.support.v7.widget.CardView
@@ -48,21 +47,23 @@
 
                     <ImageView
                         android:id="@+id/addEgitim_btn"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
 
-                        android:layout_marginEnd="2dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_marginTop="2dp"
                         android:onClick="editEgitim"
-                        android:src="@drawable/ic_add_black_24dp"
+                        android:src="@drawable/addd"
                         android:tint="@color/black" />
 
                     <TextView
                         android:id="@+id/egitimTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="serif-monospace"
                         android:padding="12dp"
                         android:text="Eğitim"
                         android:textColor="@color/cardview_dark_background"
