--- a/app/src/main/res/layout/snippet_card_yetenek.xml
+++ b/app/src/main/res/layout/snippet_card_yetenek.xml
@@ -6,6 +6,7 @@
 
 
     <android.support.v7.widget.CardView
+        android:id="@+id/yetenekLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="5dp"
@@ -47,14 +48,14 @@
 
                     <ImageView
                         android:id="@+id/addYetenek_btn"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginEnd="2dp"
                         android:layout_marginTop="2dp"
                         android:onClick="addYetenek"
-                        android:src="@drawable/ic_add_black_24dp"
+                        android:src="@drawable/addd"
                         android:tint="@color/black" />
 
                     <TextView
@@ -62,6 +63,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="12dp"
+                        android:fontFamily="serif-monospace"
+                        android:layout_centerInParent="true"
                         android:text="Yetenekler"
                         android:textColor="@color/cardview_dark_background"
                         android:textSize="20sp"
