--- a/app/src/main/res/layout/user_profil_frag.xml
+++ b/app/src/main/res/layout/user_profil_frag.xml
@@ -22,7 +22,7 @@
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="240dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/picture"
                 app:collapsedTitleGravity="center_vertical"
                 app:collapsedTitleTextAppearance="@style/personal_collapsed_title"
@@ -79,29 +79,16 @@
                         android:id="@+id/profilimageProgress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:visibility="visible"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
                         android:layout_centerInParent="true"
-                        android:layout_marginTop="68dp"
-                        app:indicatorColor="@color/SlateBlue"
                         android:layout_gravity="center"
-                        app:indicatorName="LineScaleIndicator">
+                        android:layout_marginTop="68dp"
+                        android:visibility="visible"
+                        app:indicatorColor="@color/SlateBlue"
+                        app:indicatorName="BallClipRotateMultipleIndicator">
 
                     </com.wang.avi.AVLoadingIndicatorView>
-
-                    <!--
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="43dp"
-                        android:layout_alignBaseline="@id/userProfile"
-                        android:orientation="horizontal"
-                        android:id="@+id/relativeLayout">
-
-                    </RelativeLayout>
--->
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -147,6 +134,10 @@
                             android:textColorHint="#ffffff"
                             android:textSize="12sp" />
 
+                        <include layout="@layout/snippet_user_info">
+
+                        </include>
+
                     </LinearLayout>
 
                     <TextView
@@ -181,17 +172,19 @@
 
                     </View>
 
+
                 </RelativeLayout>
             </android.support.design.widget.CollapsingToolbarLayout>
 
         </android.support.design.widget.AppBarLayout>
+
 
         <android.support.v4.widget.NestedScrollView
 
             android:id="@+id/nestedScroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:padding="10dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <include
@@ -221,105 +214,13 @@
             android:id="@+id/profileProgress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:visibility="visible"
             app:indicatorColor="@color/SlateBlue"
-            android:layout_gravity="center"
             app:indicatorName="LineScalePulseOutIndicator">
 
         </com.wang.avi.AVLoadingIndicatorView>
+
     </android.support.design.widget.CoordinatorLayout>
-
-    <LinearLayout
-        android:id="@+id/footer_linear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:background="@color/white"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Öz.Grntlnme"
-                android:textColor="#bcbaba"
-                android:textSize="14sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="314"
-                android:textColor="#797878"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:gravity="center"
-
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Başvuru Sayısı"
-                android:textColor="#bcbaba"
-                android:textSize="14sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="125"
-                android:textColor="#797878"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Mesajlarım"
-                android:textColor="#bcbaba"
-                android:textSize="14sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="125"
-                android:textColor="#797878"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-    </LinearLayout>
 
 </RelativeLayout>
