--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#a64c8e44</color>
     <color name="colorAccent">#FF4081</color>
     <color name="TransparentWhite">#40FFFFFF</color>
     <color name="primary">#E43F3F</color>
@@ -19,7 +19,12 @@
     <color name="aluminum">#999999</color>
     <color name="base">#AAAAAA</color>
     <color name="iron">#CCCCCC</color>
+    <color name="mapAlpha">#A64C8E44</color>
+
     <color name="white">#FFFFFF</color>
+    <color name="retro">#755f5d</color>
+    <color name="retro1">#d4ccb9</color>
+    <color name="retro2">#baafae</color>
     <color name="opak">#29000000</color>
 
     <color name="yellow">#FFFF00</color>
@@ -36,6 +41,9 @@
     <color name="green">#008000</color>
     <color name="blue">#0000FF</color>
     <color name="navy">#000080</color>
+    <color name="navy2">#d59563</color>
+    <color name="navy3">#c7d5ac</color>
+    <color name="navy4">#ddeedd</color>
 
 
     <color name="White">#FFFFFF</color>
