--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -98,9 +98,42 @@
 
 
 
+<!-- BOTTOM SHEET TOOLBAR STYLE -->
+
+    <style name="MainTabLayoutStyle" parent="Widget.Design.TabLayout">
+        <item name="tabPaddingStart">12dp</item>
+        <item name="tabPaddingEnd">12dp</item>
+        <item name="tabMode">fixed</item>
+        <item name="tabGravity">fill</item>
+        <item name="tabBackground">?attr/selectableItemBackground</item>
+        <item name="tabTextAppearance">@style/MainTabTextAppearance</item>
+    </style>
+    <style name="MainTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="MainToolbarStyle" parent="Widget.AppCompat.Toolbar">
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:background">@color/mycolor2</item>
+        <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+    </style>
+
+    <style name="BottomSheetAppBarStyle" parent="Widget.Design.AppBarLayout">
+        <item name="android:theme">@style/Theme.AppCompat.Light</item>
+    </style>
 
 
+    <style name="MainAppBarStyle" parent="Widget.Design.AppBarLayout">
+        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+    </style>
 
+    <style name="BottomSheetToolbarStyle" parent="Widget.AppCompat.Toolbar">
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:theme">@style/ThemeOverlay.AppCompat.Light</item>
+        <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+    </style>
 
-
+    <style name="BottomSheetTabLayoutStyle" parent="MainTabLayoutStyle">
+        <item name="tabIndicatorColor">?attr/colorPrimaryDark</item>
+    </style>
 </resources>
