--- a/app/src/main/res/layout/jobsearch2.xml
+++ b/app/src/main/res/layout/jobsearch2.xml
@@ -100,7 +100,17 @@
                         android:layout_marginEnd="5dp"
                         android:layout_marginTop="10dp"
                         android:src="@drawable/ic_my_location_black_24dp"
-                        android:tint="@color/BurlyWood"
+                        android:tint="@color/Red"
+                        app:backgroundTint="@color/white"
+                        app:fabSize="mini" />
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/changeLocation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|end"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="60dp"
+                        android:src="@drawable/placeholders"
                         app:backgroundTint="@color/white"
                         app:fabSize="mini" />
 
