--- a/app/src/main/res/drawable/round.xml
+++ b/app/src/main/res/drawable/round.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#2C3646" />
-    <corners android:bottomRightRadius="25dp"
-        android:bottomLeftRadius="25dp"
-        android:topRightRadius="25dp"
-        android:topLeftRadius="25dp"/>
+    <solid android:color="@color/white" />
+
+    <stroke android:width="1dp"
+        android:color="@color/retro"></stroke>
+    <corners android:bottomRightRadius="15dp"
+        android:bottomLeftRadius="15dp"
+        android:topRightRadius="15dp"
+        android:topLeftRadius="15dp"/>
 </shape>
