--- a/app/src/main/res/drawable/white_grey_border_top.xml
+++ b/app/src/main/res/drawable/white_grey_border_top.xml
@@ -13,7 +13,7 @@
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/DarkSlateBlue"/>
+                android:color="@color/Tan"/>
             <solid
                 android:color="@color/white"/>
 
