--- a/app/src/main/res/layout/custom_info_contents.xml
+++ b/app/src/main/res/layout/custom_info_contents.xml
@@ -56,9 +56,10 @@
             android:id="@+id/distance2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="italic"
             android:layout_marginStart="3dp"
             android:layout_toEndOf="@+id/distance"
-            android:textColor="@color/SeaGreen" />
+            android:textColor="@color/jumbo" />
 
 
     </RelativeLayout>
