--- a/app/src/main/res/layout/fragment_nested_scroll.xml
+++ b/app/src/main/res/layout/fragment_nested_scroll.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:scrollbars="vertical">
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
+    android:scrollbars="none"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="BURAYA YAKINDAKİ İŞLERİN LİSTESİ GELECEK"
-            android:textSize="20dp" />
-
-
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/nearJobList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
