--- a/app/src/main/res/layout/near_job_activity.xml
+++ b/app/src/main/res/layout/near_job_activity.xml
@@ -1,55 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/bottom_sheet_appbar"
+        android:id="@+id/nearJobappbar"
         style="@style/BottomSheetAppBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/bottom_sheet_toolbar"
-            style="@style/MainToolbarStyle"
-            android:layout_width="match_parent">
 
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:fontFamily="serif-monospace"
-                    android:gravity="center_horizontal"
-                    android:text="-Seçilen Kategori İsmi-"
-                    android:textColor="@android:color/black"
-                    android:textSize="20dp" />
-            </RelativeLayout>
-
-
-        </android.support.v7.widget.Toolbar>
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/bottom_sheet_tabs"
-            style="@style/BottomSheetTabLayoutStyle"
+        <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="150dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/nearjobToolbar"
+                style="@style/MainToolbarStyle"
+                android:layout_width="match_parent"
+                app:layout_collapseMode="pin">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/bottom_sheet_viewpager"
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                        android:fontFamily="serif-monospace"
+                        android:gravity="center_horizontal"
+                        android:text="-Seçilen Kategori İsmi-"
+                        android:textColor="@android:color/black"
+                        android:textSize="20dp" />
+                </RelativeLayout>
+
+
+            </android.support.v7.widget.Toolbar>
+
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/vUserProfileRoot"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="?attr/actionBarSize"
+                android:background="@color/GhostWhite"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                app:cardUseCompatPadding="true"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="1">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:id="@+id/image5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/waypath"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/userAdress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/image5"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="17dp"
+                        android:layout_toEndOf="@+id/image5"
+                        android:text="Merkez Mah. 128.Sok No :12 Daire 4 İstanbul Beylikdüzü "
+                        android:textAlignment="center"
+                        android:textSize="13dp" />
+
+                    <TextView
+                        android:id="@+id/userArea"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/userAdress"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginStart="10dp"
+
+                        android:layout_toEndOf="@+id/image5"
+                        android:text="3 Km İçinde 10 sonuc Listeleniyor "
+
+                        android:textAlignment="center"
+                        android:textSize="12dp" />
+
+                </RelativeLayout>
+
+
+
+
+            </android.support.v7.widget.CardView>
+
+
+
+    </android.support.design.widget.CollapsingToolbarLayout>
+
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/nearJobTab"
+        style="@style/BottomSheetTabLayoutStyle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom" />
+
+</android.support.design.widget.AppBarLayout>
 
 
-</LinearLayout>
+<android.support.v4.view.ViewPager
+android:id="@+id/nearJobPager"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
+    </android.support.design.widget.CoordinatorLayout>
