--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,10 +12,18 @@
     <color name="orange">#FA0</color>
     <color name="mycolor">#0B5268</color>
     <color name="mycolor2">#500B5268</color>
+    <color name="markercolor">#EBBA16</color>
+    <color name="tw__blue_default">#FF5BAAF4</color>
+    <color name="tw__blue_pressed">#FF4186C8</color>
+    <color name="tw__light_gray">#ccd6dd</color>
+    <color name="tw__solid_white">#FFFFFFFF</color>
+    <color name="markercolor2">#25AE88</color>
+    <color name="markercolor3">#D80027</color>
     <color name="jet">#222222</color>
+    <color name="mycolor5">#2C3646</color>
     <color name="oil">#333333</color>
     <color name="monsoon">#777777</color>
-    <color name="jumbo">#888888</color>
+    <color name="jumbo">#353ca4</color>
     <color name="aluminum">#999999</color>
     <color name="base">#AAAAAA</color>
     <color name="iron">#CCCCCC</color>
@@ -47,6 +55,7 @@
 
 
     <color name="White">#FFFFFF</color>
+    <color name="White2">#fff8f8</color>
     <color name="Ivory">#FFFFF0</color>
     <color name="LightYellow">#FFFFE0</color>
     <color name="Yellow">#FFFF00</color>
