--- a/app/src/main/res/values/default.xml
+++ b/app/src/main/res/values/default.xml
@@ -18,6 +18,7 @@
     <dimen name="mb_width_120">120dp</dimen>
     <dimen name="mb_width_200">200dp</dimen>
     <dimen name="mb_height_56">56dp</dimen>
+    <dimen name="mb_widht_56">56dp</dimen>
     <dimen name="mb_height_8">8dp</dimen>
     <dimen name="mb_height_4">4dp</dimen>
 
