--- a/app/src/main/res/layout/jobadvertdetails.xml
+++ b/app/src/main/res/layout/jobadvertdetails.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:map="http://schemas.android.com/apk/res-auto"
 
@@ -37,7 +37,6 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/head1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
@@ -55,6 +54,7 @@
                 </RelativeLayout>
 
                 <TextView
+                    android:id="@+id/tanimTv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/deneme_text"
