--- a/app/src/main/res/layout/joblist_row.xml
+++ b/app/src/main/res/layout/joblist_row.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
-    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
         android:id="@+id/maincard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
