--- a/app/src/main/res/drawable/edittext2.xml
+++ b/app/src/main/res/drawable/edittext2.xml
@@ -4,14 +4,14 @@
     android:shape="rectangle">
 
     <stroke android:width="1dp"
-        android:color="@color/Gold"
+        android:color="@color/Tan"
        />
 
-    <corners android:radius="10dp" android:angle="270"
+    <corners android:radius="3dp" android:angle="270"
         />
 
     <gradient
-        android:startColor="#FFF8F8"
+        android:startColor="#FFFFFF"
         android:endColor="#FFFFFF"
         android:type="linear"
         android:angle="270"/>
