--- a/app/src/main/res/drawable/quarter.xml
+++ b/app/src/main/res/drawable/quarter.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <size android:height="25dp" android:width="25dp"/>
-    <solid android:color="@color/BurlyWood"/>
-    <corners android:topLeftRadius="0dp"
-        android:topRightRadius="20dp"/>
+
+    <size
+        android:width="25dp"
+        android:height="25dp" />
+
+    <solid android:color="@color/mycolor" />
+
+    <corners
+        android:topLeftRadius="50dp"
+        android:topRightRadius="1dp" />
 </shape>
