Yakınımdaki İşleri Listele Sayfası düzenlendi.

--- a/app/src/main/res/layout/jobadvertdetails.xml
+++ b/app/src/main/res/layout/jobadvertdetails.xml
@@ -394,7 +394,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="10dp"
                         android:layout_marginTop="10dp"
-                        android:src="@drawable/markerjob" />
+                        android:src="@drawable/map_with_locationmark" />
 
                     <TextView
                         android:id="@+id/distance3"
