--- a/app/src/main/res/drawable-hdpi/btnback2.xml
+++ b/app/src/main/res/drawable-hdpi/btnback2.xml
@@ -3,8 +3,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/back_layer">
         <shape android:shape="rectangle">
-            <corners android:radius="20dp" />
-            <solid android:color="@color/Green2" />
+            <corners android:radius="10dp" />
+            <solid android:color="@color/markercolor" />
         </shape>
     </item>
 
@@ -15,7 +15,7 @@
                 android:color="@color/markercolor"
                 android:width="1dp"
                 />
-            <corners android:radius="10dp" />
+            <corners android:radius="5dp" />
             <solid android:color="@color/white" />
         </shape>
     </item>
