--- a/app/src/main/res/drawable-hdpi/btnback3.xml
+++ b/app/src/main/res/drawable-hdpi/btnback3.xml
@@ -3,7 +3,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/back_layer">
         <shape android:shape="rectangle">
-            <corners android:radius="20dp" />
+            <corners android:radius="10dp" />
             <solid android:color="@color/Green2" />
         </shape>
     </item>
@@ -12,11 +12,11 @@
 
         <shape android:shape="rectangle">
             <stroke
-                android:color="@color/markercolor"
+                android:color="@color/Green2"
                 android:width="1dp"
                 />
-            <corners android:radius="10dp" />
-            <solid android:color="@color/white" />
+            <corners android:radius="5dp" />
+            <solid android:color="@color/YellowGreen" />
         </shape>
     </item>
 </layer-list>
