--- a/app/src/main/res/drawable/right_rounded.xml
+++ b/app/src/main/res/drawable/right_rounded.xml
@@ -3,11 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:shape="rectangle">
-    <solid android:color="@color/white"> </solid>
+    <solid android:color="@color/retro"> </solid>
     <corners
-        android:bottomLeftRadius="15dp"
         android:bottomRightRadius="15dp"
-        android:topLeftRadius="15dp"
         android:topRightRadius="15dp"
         />
 
