--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -20,8 +20,12 @@
         android:gravity="center"
         android:layout_centerInParent="true"
         android:textSize="25dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/round"
         android:layout_height="wrap_content"
         android:text="KAMERA AÇILIYOR "
+        android:textColor="@color/mycolor"
+        android:fontFamily="serif-monospace"
         android:textStyle="bold"
 
 
