--- a/app/src/main/res/layout/fragment_nested_scroll.xml
+++ b/app/src/main/res/layout/fragment_nested_scroll.xml
@@ -19,6 +19,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/nearJobList"
             android:layout_width="match_parent"
+            android:layoutAnimation="@anim/layout_animation"
             android:layout_height="wrap_content">
 
 
