--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="markercolor">#EBBA16</color>
     <color name="tw__blue_default">#FF5BAAF4</color>
     <color name="tw__blue_pressed">#FF4186C8</color>
+     <color name="md_teal_500">#009688</color>
+
     <color name="tw__light_gray">#ccd6dd</color>
     <color name="tw__solid_white">#FFFFFFFF</color>
     <color name="markercolor2">#25AE88</color>
