--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+   <style name="StepperLayoutTheme" parent="MSDefaultStepperLayoutTheme">
+   </style>
+
+
     <style name="AppTheme2" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/red</item>
@@ -20,6 +25,7 @@
         <item name="colorControlNormal">@color/SkyBlue</item>
         <item name="colorControlActivated">@color/Tomato</item>
     </style>
+
     <style name="FullWidthEditText" parent="Widget.AppCompat.EditText">
         <item name="android:padding">20dp</item>
         <item name="android:background">@null</item>
@@ -135,7 +141,7 @@
 
     <style name="BottomSheetTabLayoutStyle" parent="MainTabLayoutStyle">
         <item name="tabIndicatorColor">@color/purple</item>
-        <item name="tabSelectedTextColor">@color/SeaGreen</item>
+        <item name="tabSelectedTextColor">@color/purple</item>
     </style>
 
     <style name="myButonStyle">
@@ -161,11 +167,6 @@
         <item name="successBackground">@drawable/statebutton_md_bluebg_success</item>
         <item name="failedBackground">@drawable/statebutton_md_bluebg_failed</item>
     </style>
-
-
-
-
-
 
 
 
