--- a/app/src/main/res/layout/jobsearch23.xml
+++ b/app/src/main/res/layout/jobsearch23.xml
@@ -80,7 +80,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="60dp"
+                        android:layout_marginEnd="12dp"
                         android:layout_marginStart="12dp"
                         android:layout_marginTop="15dp"
                         android:background="@drawable/edittext2">
@@ -116,9 +116,9 @@
                         android:id="@+id/myLocButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="top|end"
+                        android:layout_gravity="bottom|end"
                         android:layout_marginEnd="5dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="115dp"
                         android:src="@drawable/markeruser"
                         app:backgroundTint="@color/white"
                         app:fabSize="mini" />
@@ -127,9 +127,9 @@
                         android:id="@+id/changeLocation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="top|end"
+                        android:layout_gravity="bottom|end"
                         android:layout_marginEnd="5dp"
-                        android:layout_marginTop="60dp"
+                        android:layout_marginBottom="60dp"
                         android:src="@drawable/placeholders"
                         app:backgroundTint="@color/white"
                         app:fabSize="mini" />
